[tool.poetry]
name = "imageuploader"
version = "0.1.0"
description = ""
authors = ["Tag-Epic <tagepicuwu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
itsdangerous = "^2.0.1"
fastapi = "^0.73.0"
uvicorn = "^0.17.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
